[package]
name        = "trusty-analyze"
version     = "0.4.1"
edition     = "2021"
license     = "MIT"
authors.workspace    = true
repository.workspace = true
homepage             = "https://github.com/bobmatnyc/trusty-tools"
readme               = "README.md"
description = "Sidecar code-analysis daemon for trusty-search: complexity, smells, quality, facts"
keywords    = ["code-analysis", "complexity", "code-smells", "mcp", "daemon"]
categories  = ["development-tools", "command-line-utilities"]
build       = "build.rs"
exclude     = ["ui/node_modules"]

[[bin]]
name = "trusty-analyze"
path = "src/main.rs"
# Why (issue #249): the `trusty-analyze` binary boots the axum HTTP daemon and
# the axum-backed MCP HTTP/SSE transport, so it needs the `http-server` feature
# compiled in. Listing it here keeps `--no-default-features` library builds
# (e.g. consumers that only want the CLI types or the pure dispatcher) from
# accidentally trying to build this binary without axum and failing to link
# the `service` and `mcp::sse` modules.
required-features = ["http-server"]

[lib]
name = "trusty_analyze"
path = "src/lib.rs"

[dependencies]
tokio              = { workspace = true }
# Why (issue #249): axum + tower-http are HTTP-server only. Gating them behind
#      the `http-server` feature mirrors the rule already enforced in
#      `trusty-common` (`axum-server`) and `trusty-memory` so downstream library
#      consumers can drop the HTTP stack entirely with `default-features = false`.
axum               = { workspace = true, optional = true }
tower-http         = { workspace = true, optional = true }
reqwest            = { workspace = true, features = ["http2"] }
futures-util       = { workspace = true }
futures            = { workspace = true }
tokio-stream       = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
chrono             = { workspace = true }
async-trait        = { workspace = true }
clap               = { workspace = true }
clap_complete      = { workspace = true }
colored            = { workspace = true }
dirs               = { workspace = true }
which              = { workspace = true }
tempfile           = { workspace = true }
open               = { workspace = true }
redb               = { workspace = true }
dashmap            = { workspace = true }
rust-embed         = { workspace = true }
mime_guess         = { workspace = true }
trusty-common      = { workspace = true, features = ["symgraph", "cli-help", "update-check", "bedrock"] }
tree-sitter            = { workspace = true }
tree-sitter-rust       = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-python     = { workspace = true }
tree-sitter-java       = { workspace = true }
tree-sitter-go         = { workspace = true }
tree-sitter-ruby       = { workspace = true }
tree-sitter-php        = { workspace = true }
tree-sitter-c          = { workspace = true }
tree-sitter-cpp        = { workspace = true }
tree-sitter-c-sharp    = { workspace = true }
tree-sitter-kotlin-ng  = { workspace = true }
tree-sitter-swift      = { workspace = true }
tree-sitter-scala      = { workspace = true }
ndarray            = { workspace = true }
scip               = { workspace = true }
protobuf           = { workspace = true }
xxhash-rust        = { workspace = true }
base64             = { workspace = true }
hmac               = { workspace = true }
sha2               = { workspace = true }
hex                = { workspace = true }
# Why (issue #536): fastembed is now optional so callers can select the ORT
#      backend via Cargo features instead of having ort-download-binaries
#      hardcoded.  The base features list only includes the TLS stack needed
#      to fetch the ONNX model; the ORT backend feature is added by one of
#      the bundled-ort / load-dynamic / cuda sub-features below.
fastembed  = { workspace = true, features = ["hf-hub-rustls-tls"], optional = true }
ort        = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }

[features]
# Why (issue #249): mirrors the `trusty-common` / `trusty-memory` rule that
#      axum + tower-http are HTTP-server-only deps. Defaults to `http-server`
#      so the `trusty-analyze` binary — and the standard `cargo install
#      trusty-analyze` / `cargo test -p trusty-analyze` flows — keep building
#      exactly as before. Library consumers that only want the dispatcher /
#      CLI types override with `default-features = false`.
#
# Why (issue #536): `bundled-ort` is now part of the default set so existing
#      installs (`cargo install trusty-analyze`) keep the same behaviour (static
#      ORT libs bundled, glibc ≥ 2.38 hosts).  To install on glibc < 2.38
#      (e.g. Amazon Linux 2023 / glibc 2.34) use:
#        cargo install trusty-analyze \
#          --no-default-features --features http-server,load-dynamic
#      and set ORT_DYLIB_PATH to the system libonnxruntime.so path at runtime.
default = ["http-server", "bundled-ort"]
# Enables the axum HTTP daemon surface (the `service` module and the
# `mcp::sse` HTTP/SSE transport). Pulls in `axum`, `tower-http`, and the
# matching `trusty-common/axum-server` feature flag.
http-server = ["dep:axum", "dep:tower-http", "trusty-common/axum-server"]
# Bundle the static ORT libs downloaded by fastembed (glibc ≥ 2.38 hosts,
# macOS). This is the default ORT backend. Mutually exclusive with
# load-dynamic and cuda at the ort-sys level.
bundled-ort  = ["dep:fastembed", "fastembed/ort-download-binaries"]
# Dynamic ORT loading — no bundled static libs. Use on glibc < 2.38 hosts
# (e.g. Amazon Linux 2023) with a system ONNX Runtime installation.
# Build: cargo install trusty-analyze --no-default-features \
#                                     --features http-server,load-dynamic
# Runtime: export ORT_DYLIB_PATH=/path/to/libonnxruntime.so
load-dynamic = ["dep:fastembed", "fastembed/ort-load-dynamic"]
# GPU-accelerated embedding via the ONNX Runtime CUDA execution provider.
# Always pair with --no-default-features so bundled-ort is dropped.
cuda         = ["dep:fastembed", "fastembed/cuda", "fastembed/ort-load-dynamic"]
ner     = ["dep:ort", "dep:tokenizers"]

[dev-dependencies]
tempfile       = { workspace = true }
tower          = { workspace = true }
http-body-util = { workspace = true }
