[package]
name = "trusty-bm25-daemon"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Per-palace BM25 lexical-index subprocess for the trusty-* ecosystem (issue #156)"
license = "Elastic-2.0"
authors.workspace = true
repository.workspace = true
readme = "README.md"
homepage = "https://github.com/bobmatnyc/trusty-tools"
keywords = ["mcp", "bm25", "search", "daemon"]
categories = ["command-line-utilities"]

[[bin]]
name = "trusty-bm25-daemon"
path = "src/main.rs"

[dependencies]
# Uses the in-tree, zero-dep BM25 implementation from trusty-common
# (`bm25` feature). Keeps the tokenizer's camelCase / alpha↔digit splits
# in lock-step with every other consumer (trusty-search, trusty-memory).
trusty-common = { workspace = true, features = ["bm25"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# The integration test drives the daemon through the same client surface
# real consumers use, so enable the `bm25-client` feature here.
trusty-common = { workspace = true, features = ["bm25", "bm25-client"] }
