[package]
name = "trusty-bm25-daemon"
version = "0.1.0"
publish = true
edition = "2021"
rust-version = "1.91"
description = "Per-palace BM25 lexical-index subprocess for the trusty-* ecosystem (issue #156)"
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
homepage = "https://github.com/bobmatnyc/trusty-tools"
keywords = ["mcp", "bm25", "search", "daemon"]
categories = ["command-line-utilities"]

[lib]
# Why: exposing a [lib] target lets trusty-memory bundle the
# trusty-bm25-daemon binary without a separate `cargo install` step — the
# bundler crate declares this as a dependency and adds its own thin
# [[bin]] shim. Mirrors PR #190 (trusty-embedderd / trusty-search).
# What: rlib so it is linkable from the bundled-install shim. Both `name`
# and `path` are spelled out explicitly so the lib target is unambiguous
# even if the directory layout changes.
# Test: `cargo build -p trusty-bm25-daemon` produces both lib and bin.
name = "trusty_bm25_daemon"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "trusty-bm25-daemon"
path = "src/main.rs"

[dependencies]
# Uses the in-tree, zero-dep BM25 implementation from trusty-common
# (`bm25` feature). Keeps the tokenizer's camelCase / alpha↔digit splits
# in lock-step with every other consumer (trusty-search, trusty-memory).
trusty-common = { workspace = true, features = ["bm25"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# The integration test drives the daemon through the same client surface
# real consumers use, so enable the `bm25-client` feature here.
trusty-common = { workspace = true, features = ["bm25", "bm25-client"] }
