[package]
name = "trusty-code"
version = "0.0.0"
edition = "2024"
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Per-project Claude-Code-compatible MPM orchestration harness (bin: tcode). Phase 0 scaffold; full extraction tracked in #587."
publish = false

[[bin]]
name = "tcode"
path = "src/main.rs"

[lib]
name = "trusty_code"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
