[package]
name = "trusty-code"
version = "0.0.0"
edition = "2024"
rust-version.workspace = true
# license.workspace resolves to "MIT"; publish=false so crates.io validation
# is never triggered, but LICENSE is kept in-crate for correctness.
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Per-project Claude-Code-compatible MPM orchestration harness (bin: tcode). Phase 1-3/6 modules extracted from open-mpm. Full extraction tracked in #587."
publish = false

[[bin]]
name = "tcode"
path = "src/main.rs"

[lib]
name = "trusty_code"
path = "src/lib.rs"

[dependencies]
# Core error handling and async runtime
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Serialization (events, ipc, perf, build_info, tools, agents)
serde = { workspace = true }
serde_json = { workspace = true }

# Timestamp support (perf, build_info)
chrono = { workspace = true }

# UUID generation (ipc task IDs)
uuid = { workspace = true }

# CLI entry point (tcode binary)
clap = { workspace = true }
tracing-subscriber = { workspace = true }

# Phase 2: async trait dispatch for ToolExecutor, AgentRunner, SearchProvider
async-trait = { workspace = true }

# Phase 3: TOML config parsing for AgentConfig
toml = { workspace = true }

# Structured error types for library code (FsError, etc.)
thiserror = { workspace = true }

[dev-dependencies]
# Async test runtime (events, build_info, perf async tests, tools tests)
tokio = { workspace = true }
# Temp directories for build_info, delegate, and agents tests
tempfile = { workspace = true }
