[package]
name = "trusty-common"
version = "0.3.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared utilities and provider-agnostic streaming chat (ChatProvider, OllamaProvider, OpenRouter, tool-use) for trusty-* projects"
readme = "README.md"
keywords = ["mcp", "utilities", "cli", "openrouter"]
categories = ["command-line-utilities"]
homepage = "https://github.com/bobmatnyc/trusty-tools"

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "io-std", "macros", "rt", "sync", "process"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
colored = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
# Optional: enabled by the `rpc` feature for UUID-v4 JSON-RPC request ids.
uuid = { workspace = true, optional = true }

# launchd module is macOS-only and needs getuid(2) for the gui/<uid> domain.
[target.'cfg(target_os = "macos")'.dependencies]
libc = { workspace = true }

[dev-dependencies]
toml = "0.8"

[features]
default = []
# Enables the `server` module: standard axum middleware stack (CORS, trace,
# gzip) and a fast-fail reqwest client for daemon-to-daemon calls.
axum-server = ["dep:axum", "dep:tower-http"]
# Enables the `mcp` module: shared JSON-RPC 2.0 / MCP primitives (formerly the
# `trusty-mcp-core` crate). Pulls in no extra deps beyond `serde` / `tokio`
# which are already required.
mcp = []
# Enables the `rpc` module: general-purpose JSON-RPC client + stdio/HTTP
# transports + pretty-print helpers (formerly the library half of the
# `trusty-rpc` crate). Requires `uuid` for request id generation and reuses
# the workspace `reqwest` for HTTP transport.
rpc = ["dep:uuid"]
