[package]
name = "trusty-common"
version = "0.4.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared utilities and provider-agnostic streaming chat (ChatProvider, OllamaProvider, OpenRouter, tool-use) for trusty-* projects"
readme = "README.md"
keywords = ["mcp", "utilities", "cli", "openrouter"]
categories = ["command-line-utilities"]
homepage = "https://github.com/bobmatnyc/trusty-tools"

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "io-std", "macros", "rt", "sync", "process"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
colored = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
# Optional: enabled by the `rpc` feature for UUID-v4 JSON-RPC request ids.
uuid = { workspace = true, optional = true }
# Optional: enabled by the `embedder` feature (formerly the `trusty-embedder`
# crate). fastembed-rs provides the ONNX-runtime text-embedding pipeline;
# `hf-hub-native-tls` is required so it can fetch the model on first run.
fastembed = { workspace = true, features = ["hf-hub-native-tls"], optional = true }
lru = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }

# Optional: enabled by the `monitor-tui` feature (formerly the
# `trusty-monitor-tui` crate). ratatui + crossterm power the unified
# terminal dashboard for the trusty-search and trusty-memory daemons.
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }

# Optional: enabled by the `symgraph` / `symgraph-parser` features (formerly
# the `trusty-symgraph` crate). The `symgraph` feature pulls in only the
# pure-data contracts surface (`thiserror`, `sha2`) — no tree-sitter, no
# `links` conflict. The `symgraph-parser` feature additionally pulls in
# tree-sitter and all grammar crates plus the emitter / editor stack.
thiserror = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
indexmap = { version = "2", features = ["serde"], optional = true }
similar = { version = "2", features = ["text"], optional = true }
walkdir = { workspace = true, optional = true }
petgraph = { version = "0.8", features = ["serde-1"], optional = true }
tree-sitter = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-javascript = { workspace = true, optional = true }
tree-sitter-go = { workspace = true, optional = true }
tree-sitter-java = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
tree-sitter-c = { workspace = true, optional = true }
tree-sitter-cpp = { workspace = true, optional = true }
syn = { version = "2.0", features = ["full"], optional = true }
prettyplease = { version = "0.2", optional = true }
proc-macro2 = { version = "1.0", optional = true }
quote = { version = "1.0", optional = true }
genco = { version = "0.19", optional = true }

# Optional: enabled by the `memory-core` feature (formerly the
# `trusty-memory-core` crate). Memory Palace storage engine — usearch
# vector index, SQLite-backed knowledge graph, fastembed embeddings,
# git-history extraction, dream/decay analytics. Heavy deps gated behind
# the feature so downstream crates that only want chat / mcp / symgraph
# pay zero cost.
usearch = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
r2d2 = { workspace = true, optional = true }
r2d2_sqlite = { workspace = true, optional = true }
git2 = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
kuzu = { workspace = true, optional = true }

# launchd module is macOS-only and needs getuid(2) for the gui/<uid> domain.
[target.'cfg(target_os = "macos")'.dependencies]
libc = { workspace = true }

# Cross-platform direct ort dep for the `embedder` feature. Pinned to the
# exact version fastembed-rs requires (`=2.0.0-rc.12`). We need ort as a
# direct dep so we can register execution providers at runtime (CoreML on
# Apple Silicon, CUDA when the `embedder-cuda` feature is enabled).
[dependencies.ort]
version = "=2.0.0-rc.12"
default-features = false
features = ["std", "api-24"]
optional = true

# macOS-specific: add the `coreml` feature so the runtime can build a
# CoreML EP on Apple Silicon. Only takes effect when the `embedder`
# feature is enabled (ort is optional).
[target.'cfg(target_os = "macos")'.dependencies.ort]
version = "=2.0.0-rc.12"
default-features = false
features = ["coreml", "std", "api-24"]
optional = true

[dev-dependencies]
toml = "0.8"
tempfile = { workspace = true }

[features]
default = []
# Enables the `server` module: standard axum middleware stack (CORS, trace,
# gzip) and a fast-fail reqwest client for daemon-to-daemon calls.
axum-server = ["dep:axum", "dep:tower-http"]
# Enables the `mcp` module: shared JSON-RPC 2.0 / MCP primitives (formerly the
# `trusty-mcp-core` crate). Pulls in no extra deps beyond `serde` / `tokio`
# which are already required.
mcp = []
# Enables the `rpc` module: general-purpose JSON-RPC client + stdio/HTTP
# transports + pretty-print helpers (formerly the library half of the
# `trusty-rpc` crate). Requires `uuid` for request id generation and reuses
# the workspace `reqwest` for HTTP transport.
rpc = ["dep:uuid"]
# Enables the `embedder` module: shared text-embedding abstraction
# (Embedder trait + FastEmbedder + MockEmbedder), formerly the
# `trusty-embedder` crate. Pulls in fastembed-rs, lru, parking_lot, and
# the ort direct dep. Defaults to bundled ORT linking — see the
# `embedder-*` sub-features for AL2023 / CUDA / load-dynamic variants.
embedder = ["dep:fastembed", "dep:lru", "dep:parking_lot", "dep:ort"]
# Bundle the ONNX Runtime static libs via fastembed's
# `ort-download-binaries-native-tls`. Right choice for macOS and modern
# Linux (glibc ≥ 2.38). Mutually exclusive with `embedder-load-dynamic`
# and `embedder-cuda` at the `ort-sys` level.
embedder-bundled-ort = ["embedder", "fastembed/ort-download-binaries-native-tls"]
# GPU-accelerated embedding via ort's CUDA execution provider. Pairs with
# `fastembed/ort-load-dynamic` so no glibc-2.38-bound static ORT binaries
# are bundled. Operators provide a host-compatible `libonnxruntime.so` and
# point to it with `ORT_DYLIB_PATH=/path/to/lib` at runtime.
embedder-cuda = ["embedder", "fastembed/cuda", "fastembed/ort-load-dynamic", "ort/cuda", "ort/load-dynamic"]
# Dynamic ORT loading without CUDA — for AL2023 (glibc 2.34) CPU-only
# builds. Set `ORT_DYLIB_PATH` at runtime.
embedder-load-dynamic = ["embedder", "fastembed/ort-load-dynamic", "ort/load-dynamic"]
# Deprecated: CoreML is now auto-detected at runtime on macOS. Kept as a
# no-op alias for backward compatibility.
embedder-coreml = ["embedder"]
# Exposes the `MockEmbedder` test double outside `cfg(test)` so downstream
# integration tests can reuse it.
embedder-test-support = ["embedder"]
# Enables the `symgraph` module's contracts surface (formerly the
# `trusty-symgraph` crate's default surface): pure data types
# (`EntityType` / `RawEntity` / `EdgeKind` / `fact_hash_str` / tables).
# Pulls in `thiserror` and `sha2` only — no tree-sitter, no `links`
# conflict. Downstream crates that only need the knowledge-graph data
# shapes (trusty-search, trusty-analyze) enable this feature and stop.
symgraph = ["dep:thiserror", "dep:sha2"]
# Enables the full symgraph parser + emitter + graph stack: tree-sitter
# grammars (Rust, Python, JavaScript, Go, Java, TypeScript, C, C++), the
# `IndexMap`-based `SymbolRegistry`, the deterministic emitter, the
# `SymbolGraph`, editor primitives, and the strategy/locality/
# test-colocation modules. Pulls in the `links = "tree-sitter"` constraint
# — only enable in one crate per build graph (typically `open-mpm`).
symgraph-parser = [
    "symgraph",
    "dep:uuid",
    "dep:indexmap",
    "dep:similar",
    "dep:walkdir",
    "dep:petgraph",
    "dep:tree-sitter",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-python",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-go",
    "dep:tree-sitter-java",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-c",
    "dep:tree-sitter-cpp",
    "dep:syn",
    "dep:prettyplease",
    "dep:proc-macro2",
    "dep:quote",
    "dep:genco",
]
# Enables the symgraph HTTP server module (axum + tokio). Implies the
# full parser stack.
symgraph-server = ["symgraph-parser", "axum-server"]
# Enables the `memory_core` module: Memory Palace storage engine
# (formerly the `trusty-memory-core` crate). Pulls in usearch (HNSW
# vector index), rusqlite + r2d2 + r2d2_sqlite (SQLite-backed knowledge
# graph), git2 (git history extraction), and dashmap / chrono / regex /
# parking_lot / thiserror / uuid utilities. Requires the bundled-ORT
# embedder variant by default so FastEmbedder is available; downstream
# consumers can switch to the load-dynamic or CUDA variants by enabling
# `embedder-load-dynamic` / `embedder-cuda` explicitly.
memory-core = [
    "dep:usearch",
    "dep:rusqlite",
    "dep:r2d2",
    "dep:r2d2_sqlite",
    "dep:git2",
    "dep:dashmap",
    "dep:futures",
    "dep:chrono",
    "dep:regex",
    "dep:parking_lot",
    "dep:thiserror",
    "dep:uuid",
    "embedder",
    "embedder-bundled-ort",
]
# Optional kuzu graph DB read-only integration on top of the memory-core
# feature. Pulls in the `kuzu` crate. Off by default because kuzu adds a
# large native dependency.
memory-core-kuzu = ["memory-core", "dep:kuzu"]
# Enables the `monitor` module: the unified ratatui dashboard for the
# trusty-search and trusty-memory daemons (formerly the `trusty-monitor-tui`
# crate, and before that the standalone `trusty-monitor` binary). Pulls in
# ratatui + crossterm; the daemon HTTP clients reuse the `reqwest` already
# required. Consumed via `trusty_common::monitor::run()` by the
# `monitor tui` subcommand of `trusty-search` and `trusty-memory`.
monitor-tui = ["dep:ratatui", "dep:crossterm"]
