[package]
name        = "trusty-console"
version     = "0.1.0"
edition     = "2024"
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage               = "https://github.com/bobmatnyc/trusty-tools"
readme                 = "README.md"
description            = "Web console that detects and surfaces running trusty services as a home page with service cards"
keywords    = ["dashboard", "console", "services", "trusty", "developer-tools"]
categories  = ["command-line-utilities", "development-tools"]
build       = "build.rs"
publish     = false
exclude     = [
    "ui/node_modules",
    "ui/src",
    "ui/package.json",
    "ui/vite.config.js",
    "ui/pnpm-lock.yaml",
]

[[bin]]
name = "trusty-console"
path = "src/main.rs"

[dependencies]
tokio              = { workspace = true }
axum               = { workspace = true }
tower-http         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
clap               = { workspace = true }
dirs               = { workspace = true }
which              = { workspace = true }
open               = { workspace = true }
rust-embed         = { workspace = true }
mime_guess         = { workspace = true }
trusty-common      = { workspace = true }

[dev-dependencies]
tempfile       = { workspace = true }
tokio          = { workspace = true }
tower          = { workspace = true }
http-body-util = { workspace = true }
