[package]
name = "trusty-cto-db"
version = "0.1.3"
edition.workspace = true
license.workspace = true
description = "Read-only SQLite query tools over the CTO ops database (~/Duetto/cto/data/cto.db)"
authors.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
# #472: aligned to 0.39 to match trusty-memory-core (only one libsqlite3-sys
# may link to the native sqlite3 lib in the final binary). Bumping here avoids
# the conflict when open-mpm pulls in both crates.
rusqlite = { version = "0.39", features = ["bundled"] }
