[package]
name = "trusty-embed-daemon"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Batching ONNX embedding subprocess for the trusty-* ecosystem"
license = "Elastic-2.0"
authors.workspace = true
repository.workspace = true
readme = "README.md"
homepage = "https://github.com/bobmatnyc/trusty-tools"
keywords = ["mcp", "embedding", "onnx", "daemon"]
categories = ["command-line-utilities"]

[[bin]]
name = "trusty-embed-daemon"
path = "src/main.rs"

[dependencies]
# The `embedder` feature pulls in fastembed + ort + the FastEmbedder/Embedder
# trait surface. The `embedder-bundled-ort` sub-feature is required so the
# binary actually links the ONNX runtime statically (without it we'd link
# nothing and the runtime would fail to load any model).
trusty-common = { workspace = true, features = ["embedder", "embedder-bundled-ort"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# `embed-client` is enabled in dev-deps so the integration test can drive the
# daemon through the same client surface real consumers use.
trusty-common = { workspace = true, features = ["embedder", "embedder-bundled-ort", "embedder-test-support", "embed-client"] }
