[package]
name = "trusty-embedder-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/bobmatnyc/trusty-tools"
description = "RPC types and client trait for the trusty-embedderd standalone embedder process (issue #110 Phase 1)."
readme = "README.md"
homepage = "https://github.com/bobmatnyc/trusty-tools"

[lib]
name = "trusty_embedder_client"
path = "src/lib.rs"

[dependencies]
# Error types: library uses thiserror for structured, downstreamable errors.
thiserror = { workspace = true }

# Async trait support.
async-trait = { workspace = true }

# Async runtime.
tokio = { workspace = true }

# HTTP client for RemoteEmbedderClient.
reqwest = { workspace = true }

# Serde for JSON wire format.
serde = { workspace = true }
serde_json = { workspace = true }

# Tracing for request logging.
tracing = { workspace = true }

# In-process embedder (wraps trusty-common FastEmbedder).
# embedder-bundled-ort is required so the ONNX runtime is linked statically
# on macOS / modern Linux — without it the test binary fails to link.
trusty-common = { workspace = true, features = ["embedder", "embedder-bundled-ort"] }

[dev-dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }

[features]
# Forward ORT feature flags so consumers can pick the ORT build strategy.
default = []
bundled-ort = ["trusty-common/embedder-bundled-ort"]
cuda = ["trusty-common/embedder-cuda"]
load-dynamic = ["trusty-common/embedder-load-dynamic"]
coreml = ["trusty-common/embedder-coreml"]
